<?xml version="1.0"?>
<package format="2">
  <name>rqt_conversation_view</name>
  <version>0.0.0</version>
  <description>The rqt_conversation_view package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <depend>mhri_social_msgs</depend>
  <depend>mhri_msgs</depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
